packages/jsii/test/negatives/neg.enum-name.3.ts
///!MATCH_ERROR: Enum names must use TRUMP_CASE: MyEnum

export enum MyEnum {
    Foo,
    Goo
}
